--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@peerlancers/json-serialization": "0.0.15",
     "bootstrap": "^4.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
