--- a/my-app/package.json
+++ b/my-app/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.6",
     "@peerlancers/json-serialization": "0.0.15",
     "bootstrap": "^4.1.0",
+    "lodash": "^4.17.20",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
